# hackathon_submission

./: Dockerfile  README.md  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  test_submission.py
app/: __init__.py  api.py  environment.py  models.py  tasks.py
baseline/: run_baseline.py
scripts/: pre_submission_validate.py
server/: app.py
support_triage_openenv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
