[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "support-triage-openenv"
version = "0.1.0"
description = "Real-world customer support triage simulation for OpenEnv"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "OpenEnv Contributors"}
]
dependencies = [
    "fastapi==0.115.12",
    "uvicorn==0.34.0",
    "pydantic==2.11.1",
    "requests==2.32.3",
    "openai>=2.7.2",
    "PyYAML==6.0.2",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Repository = "https://github.com/ParthMishra20/hackathon_submission"
Homepage = "https://huggingface.co/spaces/SuperNeon/hackathon-submission"

[tool.setuptools]
packages = ["app"]
